--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -10,6 +10,7 @@ http {
         include /etc/nginx/mime.types;
 
         listen ${LONGHORN_UI_PORT};
+        listen [::]:${LONGHORN_UI_PORT};
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
